Update green value

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 @import 'compass';
 
 $urn-xmas-red: #a31c23;
-$urn-xmas-green: #209f13;
+$urn-xmas-green: #129312;
 $urn-xmas-orange: #f1691f;
 
 @import '../../urn-material/sass/_partials/variables',
