--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@
     License: ?
 */
 .cover-photo {
-  height: 300px;
   width: 100%;
 }
 @media (max-width: 620px) {
   .cover-photo {
     display: none;
+  }
+}
+@media (max-width: 780px) {
+  .cover-photo {
+    height: 180px;
   }
 }
 
